Changes
-------

1.2
~~~

- Uninstall only look at directory which have been created by the
  recipe in the part. Other are just reported.

- Export two new variables: 
 
  ``revisions``
  
     Which is lines formatted::

        link revision

  ``updated``

     Which is lines containing updated links. 

1.1
~~~

- Add the ``ignore_verification`` option.

1.0
~~~

- Base version of the recipe.